--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
           run: |
              echo "IP=${IP} >> .env"
              echo "SECRET_KEY=${SECRET_KEY} >> .env"
-             echo "URL=${URL} >> .env"
+             echo "URL=${URL}" >> .env"
         - name: install deps
           run: pip install -r requirements.txt
         
