--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,7 @@ on:
 jobs:
     build-and-test:
         runs-on: ubuntu-latest
+        environment: project-env
         steps:
         - name: Checkout repository
           uses: actions/checkout@v4
