--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,9 +23,9 @@ jobs:
             python-version: '3.11'
         - name: Create .env file
           run: |
-             echo "IP=${IP}" >> .env"
-             echo "SECRET_KEY=${SECRET_KEY}" >> .env"
-             echo "URL=${URL}" >> .env"
+             echo "IP=${IP}" >> .env
+             echo "SECRET_KEY=${SECRET_KEY}" >> .env
+             echo "URL=${URL}" >> .env
         - name: install deps
           run: pip install -r requirements.txt
         
