--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,9 +22,9 @@ jobs:
             python-version: '3.11'
         - name: Create .env file
           run: |
-             echo "IP=${{ github.IP }}" >> .env
-             echo "SECRET_KEY=${{ github.SECRET_KEY }}" >> .env
-             echo "URL=${{ github.URL }}" >> .env
+             echo "IP=${{ secrets.IP }}" >> .env
+             echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
+             echo "URL=${{ secrets.URL }}" >> .env
         - name: install deps
           run: pip install -r requirements.txt
         
