--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         - name: Create .env file
           run: |
              echo "IP=${{ secrets.IP }}" >> personal_blog/.env
-             echo "SECRET_KEY=123123123131" >> personal_blog/.env
+             echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> personal_blog/.env
              echo "URL=${{ secrets.URL }}" >> personal_blog/.env
         - name: install deps
           run: pip install -r requirements.txt
