--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,6 +25,6 @@ jobs:
                 python3 -m venv venv
                 source venv/bin/activate
                 pip install -r requirements.txt
-                python3 manage.py collectstatic
+                python3 manage.py collectstatic --noinput
                 deactivate
                 service apache2 restart
